base/final_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librepeed-ingress
  namespace: final
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"  
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  -  http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: librespeed-service
            port:
              number: 80
